--- a/Dev_Sprint1/style.css
+++ b/Dev_Sprint1/style.css
@@ -5,9 +5,16 @@ body{
   background: #ffffff;
 }
 
+/*header*/
+.header1{
+  background-color: #ffffff;
+  padding: 30px;
+}
+
+/*Search Bar*/
 .search-box{
   position: absolute;
-  top: 50%;
+  top: 7.5%;
   left: 80%;
   transform: translate(-50%, -50%);
   background: #056571;
@@ -45,4 +52,16 @@ body{
   transition: 0.4s;
   line-height: 40px;
   width: 0px;
+}
+
+/*heading*/
+.heading{
+  text-transform: uppercase;
+  font-size: 3.5rem;
+  letter-spacing: 3px;
+  margin-right: -3px;
+  margin-bottom: 5rem;
+  text-align: center;
+  color: #333333;
+  position: relative;
 }
