--- a/templates/nav.html
+++ b/templates/nav.html
@@ -2,71 +2,88 @@
 <html lang="en">
 	<head>
 		<meta charset="UTF-8">
+		<meta name="viewport" content="width=device-width, initial-scale=1">
 		<title>Academic Writing Navigation</title>
 		<link href="styles/nav.css" rel="stylesheet">
 		<link href="https://fonts.googleapis.com/css?family=Open+Sans" rel="stylesheet">
 	</head>
 	<body>
-		<nav class="mobile-overlay">
-			<ul>
-				<li>Academic Writing</li>
+		<nav id="mobile-nav" class="overlay">
+			<a href="javascript:void(0)" class="closebtn header" onclick="closeNav()">&times;</a>
+
+			<a href="" class="header"><h3>Academic Writing</h3></a>
+			<ul class="overlay-content">
+				<li><a href="">Using inclusive language</a></li>
 					<ul>
-						<li>Using Inclusive language</li>
+						<li><a href="">Language and culture</a></li>
+						<li><a href="">Language and Australians of non-Enlgish language backgrounds</a></li>
+						<li><a href="">Language and sexuality</a></li>
+						<li><a href="">Language and gender</a></li>
+						<li><a href="">Language and disability</a></li>
+					</ul>
+				<li><a href="">Formal writing</a></li>
+					<ul>
+						<li><a href="">Making your writing sound formal</a></li>
 							<ul>
-								<li>Language and culture</li>
-								<li>Language and Australians of non-Enlgish language backgrounds</li>
-								<li>Language and sexuality</li>
-								<li>Language and gender</li>
-								<li>Language and disability</li>
-							</ul>
-						<li>Formal writing</li>
+								<li><a href="">Where to avoid using personal pronouns</a></li>
+								<li><a href="">Making judgements: evaluations and opinions</a></li>
+						  </ul>
+						<li><a href="">What to avoid in formal writing</a></li>
 							<ul>
-								<li>Making your writing sound formal</li>
-									<ul>
-										<li>Where to avoid using personal pronouns</li>
-										<li>Making judgements: evaluations and opinions</li>
-								  </ul>
-								<li>What to avoid in formal writing</li>
-									<ul>
-										<li>Cliches</li>
-										<li>Figures of speech</li>
-										<li>Informal language</li>
-										<li>Padding</li>
-										<li>Complex writing</li>
-										<li>Texting language</li>
-								  </ul>
-							</ul>
-						<li>Grammar and Punctuation</li>
+								<li><a href="">Cliches</a></li>
+								<li><a href="">Figures of speech</a></li>
+								<li><a href="">Informal language</a></li>
+								<li><a href="">Padding</a></li>
+								<li><a href="">Complex writing</a></li>
+								<li><a href="">Texting language</a></li>
+						  </ul>
+					</ul>
+				<li><a href="">Grammar and Punctuation</a></li>
+					<ul>
+						<li><a href="">Common problems in language construction</a></li>
 							<ul>
-								<li>Common problems in language construction</li>
-									<ul>
-										<li>Sentence structure</li>
-										<li>Parallel structure</li>
-										<li>The use and non-use of articles</li>
-										<li>Subject-verb agreement</li>
-									</ul>
-								<li>Using Punctuations</li>
-									<ul>
-										<li>End marks (. ! ?)</li>
-										<li>Comma, semicolon and colon (, ; :)</li>
-										<li>Dash and hyphen (– -)</li>
-										<li>Parentheses ( )</li>
-										<li>Apostrophe (')</li>
-										<li>Quotation marks (" ")</li>
-										<li>Ellipsis (...)</li>
-									</ul>
+								<li><a href="">Sentence structure</a></li>
+								<li><a href="">Parallel structure</a></li>
+								<li><a href="">The use and non-use of articles</a></li>
+								<li><a href="">Subject-verb agreement</a></li>
 							</ul>
-						<li>Quoting, paraphrasing & summarising</li>
+						<li><a href="">Using Punctuations</a></li>
 							<ul>
-								<li>Quoting</li>
-								<li>Paraphrasing</li>
-								<li>Summarising</li>
+								<li><a href="">End marks</a></li>
+								<li><a href="">Comma, semicolon and colon</a></li>
+								<li><a href="">Dash and hyphen</a></li>
+								<li><a href="">Parentheses</a></li>
+								<li><a href="">Apostrophe</a></li>
+								<li><a href="">Quotation marks</a></li>
+								<li><a href="">Ellipsis</a></li>
 							</ul>
+					</ul>
+				<li><a href="">Quoting, paraphrasing and summarising</a></li>
+					<ul>
+						<li><a href="">Quoting</a></li>
+						<li><a href="">Paraphrasing</a></li>
+						<li><a href="">Summarising</a></li>
 					</ul>
 			</ul>
 		</nav>
+		
+		<header>
+			<h1>BTO</h1>
+			<p>Navigation HTML & CSS template</p>
+		</header>
+		
+		<nav class="nav-heading" onclick="openNav()">
+			<h2>Academic Writing <span class="arrow down"></span></h2>
+		</nav>
 
-
-
+		<main>
+			<h1>Academic writing</h1>
+			<h2>Introduction to academic writing</h2>
+			<p>In this section, we take you through some of the ways in which you can write using an academic style which is appropriate and grammatically correct. We provide you with information on what to expect and how to go about achieving a satisfactory academic style, including the use of inclusive language.</p>
+			<p>If you come from a background where English is not your first language, it will be helpful to you to look at the section on common problems in language construction. If you feel your style is too informal or colloquial, read the section on making your language sound formal and what to avoid. There is also a useful guide to using punctuation and for including the ideas from research literature in your writing.</p>
+			<p>If you would like further information, please contact staff from the Academic Language and Learning Success Program (ALLSP), who run free workshops for internal and external students on English language usage as well as developing your skills to edit and proofread your assignments.</p>
+		</main>
+		
+		<script type="text/javascript" src="scripts/nav.js"></script>
 	</body>
 </html>
