--- a/templates/styles/nav.css
+++ b/templates/styles/nav.css
@@ -1,8 +1,93 @@
 * {
+	box-sizing: border-box;
 	font-family: 'Open Sans', sans-serif;
+}
+
+body {
+	margin: 0;
+	display: grid;
+	grid-template-rows: min-content 1fr;
+}
+
+header {
+	grid-row: 1/3;
+	text-align: center;
+}
+
+main {
+	margin: 1em;
 }
 
 ul {
 	list-style: none;
 	padding-left: 1em;
+}
+
+.overlay {
+  display: none;
+  background-color: #211545;
+  height: 100%;
+  width: 100%;
+  position: fixed;
+  overflow: auto;
+  top: 0;
+  left: 0;
+	padding: 1em;
+	z-index: 1;
+}
+
+.overlay a {
+  text-decoration: none;
+  display: block;
+  color: white;
+}
+
+.overlay a:not(.header) {
+  padding: .5em;
+	border: 1px solid transparent;
+}
+
+
+.overlay a:not(.header):hover, .overlay a:not(.header):focus  {
+  background-color: rgba(255,255,255,.25);
+  border-radius: 3px;
+  border: 1px solid white;
+  border
+  color: white;
+}
+
+.closebtn {
+  position: absolute;
+	right: .5em;
+  font-size: 3em;
+  padding: 0;
+}
+
+.nav-heading {
+	position: sticky;
+	top:0;
+
+	padding: .5em 1.25em;
+	background-color: #211545;
+	color: white;
+}
+
+.arrow {
+	position: absolute;
+	right: 1.25em;
+  border: solid white;
+  border-width: 0 .13em .13em 0;
+  display: inline-block;
+	padding: .3em;
+  color: white;
+  margin-top: .2em;
+}
+
+.down {
+	transform: rotate(45deg);
+}
+
+
+li {
+	border-bottom: 1px solid rgba(255,255,255,.1);
 }
