--- a/Dev_Sprint1/style.css
+++ b/Dev_Sprint1/style.css
@@ -11,6 +11,7 @@ body{
   padding: 30px;
 }
 
+
 /*Search Bar*/
 .search-box{
   position: absolute;
@@ -64,12 +65,18 @@ body{
   text-align: center;
   color: #333333;
   position: relative;
+  padding-left: 10px;
 }
 
 /*h2 topic*/
 .topic{
   font-size: 3rem;
   letter-spacing: 3px;
+  padding-left: 10px;
+}
+
+.content{
+  padding-left: 10px;
 }
 
 /*Accordion*/
@@ -113,4 +120,26 @@ span{
 
 input{
   display: none;
+}
+
+/* Table */
+table {
+	border-collapse: collapse;
+	width: 100%;
+}
+
+tr:nth-child(even){
+	background-color: #f2f2f2;
+}
+
+th{
+	text-align: left;
+	padding: 8px;
+	background-color: #000000;
+	color: #ffffff;
+}
+
+td {
+	text-align: left;
+	padding: 8px;
 }
