Starting on nav for desktop

--- a/templates/nav.html
+++ b/templates/nav.html
@@ -13,16 +13,16 @@
 
 			<a href="" class="header"><h3>Academic Writing</h3></a>
 			<ul class="overlay-content">
-				<li><a href="">Using inclusive language</a></li>
-					<ul>
+				<li class="collapsible"><a href="">Using inclusive language</a></li>
+					<ul class="collapse-content">
 						<li><a href="">Language and culture</a></li>
 						<li><a href="">Language and Australians of non-Enlgish language backgrounds</a></li>
 						<li><a href="">Language and sexuality</a></li>
 						<li><a href="">Language and gender</a></li>
 						<li><a href="">Language and disability</a></li>
 					</ul>
-				<li><a href="">Formal writing</a></li>
-					<ul>
+				<li class="collapsible"><a href="">Formal writing</a></li>
+					<ul class="collapse-content">
 						<li><a href="">Making your writing sound formal</a></li>
 							<ul>
 								<li><a href="">Where to avoid using personal pronouns</a></li>
@@ -38,8 +38,8 @@
 								<li><a href="">Texting language</a></li>
 						  </ul>
 					</ul>
-				<li><a href="">Grammar and Punctuation</a></li>
-					<ul>
+				<li class="collapsible"><a href="">Grammar and Punctuation</a></li>
+					<ul class="collapse-content">
 						<li><a href="">Common problems in language construction</a></li>
 							<ul>
 								<li><a href="">Sentence structure</a></li>
@@ -58,8 +58,8 @@
 								<li><a href="">Ellipsis</a></li>
 							</ul>
 					</ul>
-				<li><a href="">Quoting, paraphrasing and summarising</a></li>
-					<ul>
+				<li class="collapsible"><a href="">Quoting, paraphrasing and summarising</a></li>
+					<ul class="collapse-content">
 						<li><a href="">Quoting</a></li>
 						<li><a href="">Paraphrasing</a></li>
 						<li><a href="">Summarising</a></li>
