--- a/templates/styles/nav.css
+++ b/templates/styles/nav.css
@@ -91,3 +91,33 @@ ul {
 li {
 	border-bottom: 1px solid rgba(255,255,255,.1);
 }
+
+@media all and (min-width: 800px) {
+
+	
+	.overlay {
+		position: relative;
+	  display: block;
+	  background-color: #211545;
+		padding: 1em;
+		width: 30%;
+	}
+
+	a.closebtn {
+		display: none;
+	}
+
+	.nav-heading {
+		display: none;
+	}
+
+	.collapse-content {
+	  padding: 0 18px;
+	  max-height: 0;
+	  overflow: hidden;
+	  transition: max-height 0.2s ease-out;
+	  background-color: #f1f1f1;
+	}
+}
+
+
