--- a/templates/nav.html
+++ b/templates/nav.html
@@ -13,6 +13,7 @@
 				<a href="javascript:void(0)" class="closebtn header" onclick="closeNav()">&times;</a>
 
 				<a href="" class="header"><h3>Academic Writing</h3></a>
+
 				<ul class="overlay-content">
 					<li class="collapsible"><a href="">Using inclusive language</a></li>
 						<ul class="collapse-content">
@@ -24,13 +25,13 @@
 						</ul>
 					<li class="collapsible"><a href="">Formal writing</a></li>
 						<ul class="collapse-content">
-							<li><a href="">Making your writing sound formal</a></li>
-								<ul>
+							<li class="collapsible"><a href="">Making your writing sound formal</a></li>
+								<ul class="collapse-content">
 									<li><a href="">Where to avoid using personal pronouns</a></li>
 									<li><a href="">Making judgements: evaluations and opinions</a></li>
 							  </ul>
-							<li><a href="">What to avoid in formal writing</a></li>
-								<ul>
+							<li class="collapsible"><a href="">What to avoid in formal writing</a></li>
+								<ul class="collapse-content">
 									<li><a href="">Cliches</a></li>
 									<li><a href="">Figures of speech</a></li>
 									<li><a href="">Informal language</a></li>
@@ -41,15 +42,15 @@
 						</ul>
 					<li class="collapsible"><a href="">Grammar and Punctuation</a></li>
 						<ul class="collapse-content">
-							<li><a href="">Common problems in language construction</a></li>
-								<ul>
+							<li class="collapsible"><a href="">Common problems in language construction</a></li>
+								<ul class="collapse-content">
 									<li><a href="">Sentence structure</a></li>
 									<li><a href="">Parallel structure</a></li>
 									<li><a href="">The use and non-use of articles</a></li>
 									<li><a href="">Subject-verb agreement</a></li>
 								</ul>
-							<li><a href="">Using Punctuations</a></li>
-								<ul>
+							<li class="collapsible"><a href="">Using Punctuations</a></li>
+								<ul class="collapse-content">
 									<li><a href="">End marks</a></li>
 									<li><a href="">Comma, semicolon and colon</a></li>
 									<li><a href="">Dash and hyphen</a></li>
