--- a/templates/styles/nav.css
+++ b/templates/styles/nav.css
@@ -94,7 +94,7 @@ li {
 
 @media all and (min-width: 800px) {
 	/* CSS GRID */
-	.overlay .sidebar {
+	.sidebar {
 		grid-area: sidebar;
 	}
 
@@ -112,7 +112,7 @@ li {
 
 	.wrapper {
 		display: grid;
-		grid-template-columns: min-content 1fr;
+		grid-template-columns: 1fr 3fr;
 		grid-template-areas:
 	  "header  header  header"
 		"sidebar content content"
@@ -120,16 +120,12 @@ li {
 		color: #444;
 	}
 
-	.overlay {
-		display: inline-block;
+	.sidebar {
+		display: inline-block !important;
 		position: relative;
 	  background-color: #211545;
 		padding: 1em;
 	}
-
-
-	/* COLLAPSIBLE NAV */
-
 
 	a.closebtn {
 		display: none;
@@ -139,14 +135,32 @@ li {
 		display: none;
 	}
 
+	/* COLLAPSIBLE NAV */
+
+	.collapsible {
+	  cursor: pointer;
+	  display: grid;
+	  grid-template-columns: 1fr min-content;
+	  grid-column: 1/2;
+	}
+
+	.collapsible:after {
+	  content: '\002B';
+	  color: white;
+	  font-weight: bold;
+	  grid-column: 2/2;
+	  margin: auto;
+	  padding-left: 1em;
+	}
+
+	.active:after {
+	  content: "\2212";
+	}
+
 	.collapse-content {
-	  padding: 0 18px;
-	  max-height: 0;
+		max-height: 0;
 	  overflow: hidden;
 	  transition: max-height 0.2s ease-out;
-	  background-color: #f1f1f1;
-
-
 	}
 }
 
