--- a/styles/content.css
+++ b/styles/content.css
@@ -25,10 +25,16 @@
 }
 
 .search-box:hover > .search-btn{
+	visibility: hidden;
   background: white;
+	position: absolute;
+	top: 10px;
+	right:10px;
+	visibility: visible;
 }
 
 .search-btn{
+	position: absolute;
   color: #eeeeee;
   float: right;
   width: 40px;
@@ -50,7 +56,7 @@
   font-size: 16px;
   transition: 0.4s;
   line-height: 40px;
-  width: 0px;
+  width: 40px;
 }
 
 /*heading*/
@@ -170,12 +176,7 @@ td {
 
 /*iPhoneX*/
 @media only screen and (max-width:375px){
-	table {
-		border-collapse: collapse;
-		width: 100%;
-	  border-collapse: collapse;
-	  border: 1px solid black;
-	}
+
 }
 
 /*S5*/
