Added sample content and formatting to better see nav functionality. This includes main and section elements with IDs for the scrolling nav and additional CSS for main and sections (just for this nav template)

--- a/templates/nav.html
+++ b/templates/nav.html
@@ -7,7 +7,7 @@
 		<title>Academic Writing Navigation</title>
 
 		<link href="https://fonts.googleapis.com/css?family=Open+Sans" rel="stylesheet">
-		<link href="styles/nav.css" rel="stylesheet">
+		<link href="nav_responsive.css" rel="stylesheet">
 	</head>
 	<body>
 		<header onclick="openNav()" class="header">
@@ -41,10 +41,66 @@
 						</li>
 					</ul>
 		    </li>
+
+		    <li><a onclick="closeNav()" class="nav-heading" href="#qps">Quoting, Paraphrasing and Summarising</a>
+					<ul>
+						<li><a onclick="closeNav()" class="nav-subheading" href="#quoting">Quoting</a></li>
+						<li><a onclick="closeNav()" class="nav-subheading" href="#paraphrasing">Paraphrasing</a></li>
+						<li><a onclick="closeNav()" class="nav-subheading" href="#summarising">Summarising</a></li>
+					</ul>
+		    </li>
 		  </ul>
 		</nav>
 
-		
-		<script type="text/javascript" src="scripts/nav.js"></script>
+		<main class="content">
+			<section id="formal-writing">
+				<h2>Formal Writing</h2>
+				<p>In this section, <em><strong>NEEDS INTRO, HELP!</strong></em></p>
+			</section>
+			<section id="formal">
+				<h3>Making your writing sound formal</h3>
+				<p>It is usually the case that in formal writing you avoid the use of personal pronouns.  These include <em>I, me, we, us and you</em>. However there are instances in certain disciplines where your lecturer will invite you to use the first person. In reflective journal writing for example, using the first person is appropriate.</p>
+			</section>
+			<section id="ppronouns">
+				<h4>Where to avoid using personal pronouns</h4>
+				<p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Officiis, blanditiis expedita? Earum eligendi pariatur quaerat quos expedita ab quibusdam ratione veniam in, mollitia fuga repudiandae?</p>
+			</section>
+			<section id="judgements">
+				<h4>Making judgements: evaluations and opinions</h4>
+				<p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Officiis, blanditiis expedita? Earum eligendi pariatur quaerat quos expedita ab quibusdam ratione veniam in, mollitia fuga repudiandae?</p>
+			</section>
+			<section id="avoid">
+				<h3>What to avoid in formal writing</h3>
+				<p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Officiis, blanditiis expedita? Earum eligendi pariatur quaerat quos expedita ab quibusdam ratione veniam in, mollitia fuga repudiandae?</p>
+			</section>
+			<section id="cliches">
+				<h4>Cliches</h4>
+				<p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Officiis, blanditiis expedita? Earum eligendi pariatur quaerat quos expedita ab quibusdam ratione veniam in, mollitia fuga repudiandae?</p>
+			</section>
+			<section id="fspeech">
+				<h4>Figures of speech</h4>
+				<p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Officiis, blanditiis expedita? Earum eligendi pariatur quaerat quos expedita ab quibusdam ratione veniam in, mollitia fuga repudiandae?</p>
+			</section>
+			<section id="informal">
+				<h4>Informal language</h4>
+				<p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Officiis, blanditiis expedita? Earum eligendi pariatur quaerat quos expedita ab quibusdam ratione veniam in, mollitia fuga repudiandae?</p>
+			</section>
+			<section id="padding">
+				<h4>Padding</h4>
+				<p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Officiis, blanditiis expedita? Earum eligendi pariatur quaerat quos expedita ab quibusdam ratione veniam in, mollitia fuga repudiandae?</p>
+			</section>
+			<section id="complex">
+				<h4>Complex writing</h4>
+				<p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Officiis, blanditiis expedita? Earum eligendi pariatur quaerat quos expedita ab quibusdam ratione veniam in, mollitia fuga repudiandae?</p>
+			</section>
+			<section id="texting">
+				<h4>Texting language</h4>
+				<p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Officiis, blanditiis expedita? Earum eligendi pariatur quaerat quos expedita ab quibusdam ratione veniam in, mollitia fuga repudiandae?</p>
+			</section>
+		</main>
+		<footer class="footer">
+		  &copy;2018 Footer
+		</footer>
+		<script type="text/javascript" src="nav_responsive.js"></script>
 	</body>
 </html>
