--- a/templates/styles/nav.css
+++ b/templates/styles/nav.css
@@ -1,4 +1,4 @@
-/* Mobile first */
+ /* Mobile first */
 
 html {
   scroll-behavior: smooth;
@@ -24,6 +24,22 @@ h1 {
   line-height: 1.75em;
 }
 
+
+main {
+  padding: 2rem 2rem 20rem 2rem;
+}
+
+section {
+  margin-bottom: 3rem;
+}
+
+footer {
+  background: #607D8B;
+  padding: 4rem 1rem;
+}
+
+/* mobile nav inspired by
+https://www.uts.edu.au/current-students/support/helps/self-help-resources/academic-writing */
 nav {
   background-color: #211545;
   height: 0%;
@@ -43,18 +59,18 @@ nav ul {
 
 /* Indent without moving the background-color position */
 nav ul li a.nav-heading {
-  padding-left: 3rem;
+  padding-left: 1rem;
 }
 
 nav ul li a.nav-subheading {
-  padding-left: 4rem;
+  padding-left: 2.5rem;
 }
 
 nav ul li a:not(nav-subheading) {
   text-decoration: none;
   display: block;
   color: white;
-  padding-left: 5rem;
+  padding-left: 4rem;
 }
 
 nav ul li a {
@@ -64,10 +80,19 @@ nav ul li a {
   text-decoration: none;
 }
 
+nav ul li a:hover {
+  border-bottom: 1px solid black;
+
+}
+
 nav ul li a.current {
   color: white;
   font-weight: bold;
   text-decoration: underline;
+}
+
+nav>ul>li:not(:first-child) {
+  margin-top: 1rem;
 }
 
 .arrow {
@@ -115,6 +140,26 @@ section:target {
   h1 {
     font-size: 2rem;
     line-height: 1.75em;
+  }
+
+  main {
+    grid-column: 2/3;
+    grid-row: 2/3;
+    padding-bottom: 30rem;
+  }
+
+  main section h2 {
+    margin-top: 0;
+  }
+
+  section {
+    padding: 1rem 0;
+    margin: 0;
+  }
+
+  footer {
+    grid-column: 1 / 3;
+    grid-row: 3/4;
   }
 
   nav {
@@ -172,4 +217,3 @@ https://css-tricks.com/sticky-smooth-active-nav/
 
 https://stackoverflow.com/questions/4086107/fixed-page-header-overlaps-in-page-anchors
 
-*/
