--- a/styles/content.css
+++ b/styles/content.css
@@ -184,76 +184,83 @@ td {
 
 
 /*iPad Pro Land*/
-@media only screen and (max-width:1366px){
+@media only screen and (min-width:1366px){
 
 }
 
 /*iPad Pro*/
-@media only screen and (max-width:1024px){
+@media only screen and (min-width:1024px){
 
 }
 
 /*iPhoneX Land*/
-@media only screen and (max-width:812px){
+@media only screen and (min-width:812px){
 
 }
 
 /*Pixel XL Land*/
-@media only screen and (max-width:823px){
+@media only screen and (min-width:823px){
 
 }
 
 /*iPhone Plus Land*/
-@media only screen and (max-width:812px){
+@media only screen and (min-width:812px){
 
 }
 
 /*iPad*/
-@media only screen and (max-width:768px){
+@media only screen and (min-width:768px){
 
 }
 
 /*Pixel Land*/
-@media only screen and (max-width:731px){
+@media only screen and (min-width:731px){
 
 }
 
 /*iPhone Land*/
-@media only screen and (max-width:667px){
+@media only screen and (min-width:667px){
 
 }
 
 /*S5 Land*/
-@media only screen and (max-width:640px){
+@media only screen and (min-width:640px){
 
 }
 
 /*iPhone5 Land*/
-@media only screen and (max-width:568px){
+@media only screen and (min-width:568px){
 
 }
 
 /*iPhone Plus*/
-@media only screen and (max-width:414px){
+@media only screen and (min-width:414px){
 
 }
 
 /*Pixel XL*/
-@media only screen and (max-width:411px){
+@media only screen and (min-width:411px){
 
 }
 
 /*iPhoneX*/
 @media only screen and (max-width:375px){
-
+	/*#back-to-top-btn{
+		bottom: 20px;
+		right: 20px;
+		font-size: 40px;
+		width: 50px;
+		height: 50px;
+		border: 3px solid #333333;
+	}*/
 }
 
 /*S5*/
-@media only screen and (max-width:360px){
+@media only screen and (min-width:360px){
 
 }
 
 /*iPhone 5*/
-@media only screen and (max-width:320px){
+@media only screen and (min-width:320px){
 
 }
