Fixed nav issues on scrolling to current topic including: - heading margins and paddings - my magic number in the javascript code on scroll to current

--- a/templates/nav.html
+++ b/templates/nav.html
@@ -7,7 +7,7 @@
 		<title>Academic Writing Navigation</title>
 
 		<link href="https://fonts.googleapis.com/css?family=Open+Sans" rel="stylesheet">
-		<link href="nav_responsive.css" rel="stylesheet">
+		<link href="styles/nav.css" rel="stylesheet">
 	</head>
 	<body>
 		<header onclick="openNav()" class="header">
@@ -101,6 +101,6 @@
 		<footer class="footer">
 		  &copy;2018 Footer
 		</footer>
-		<script type="text/javascript" src="nav_responsive.js"></script>
+		<script type="text/javascript" src="scripts/nav.js"></script>
 	</body>
 </html>
