Added hover on nav ul li a links

--- a/templates/nav.html
+++ b/templates/nav.html
@@ -26,7 +26,7 @@
 						<li><a onclick="closeNav()" class="nav-subheading" href="#formal">Making your writing sound formal</a>
 							<ul>
 								<li><a onclick="closeNav()" href="#ppronouns">Where to avoid using personal pronouns</a></li>
-								<li><a onclick="closeNav()" href="#judgements">Making judgements: evaluations and opinions</a></li>
+								<li><a onclick="closeNav()" href="#judgements" title="Making judgements: evaluations and opinions">Making judgements: evaluations and opinions</a></li>
 							</ul>
 						</li>
 						<li><a onclick="closeNav()" class="nav-subheading" href="#avoid">What to avoid in formal writing</a>
