--- a/templates/styles/nav.css
+++ b/templates/styles/nav.css
@@ -33,8 +33,9 @@ section {
 }
 
 footer {
-  background: #607D8B;
+  background: #211545;
   padding: 4rem 1rem;
+  color: white;
 }
 
 /* mobile nav inspired by
@@ -128,12 +129,27 @@ section:target {
     grid-row: 1 / 2;
     display: inline-block;
     position: static;
-    padding: 4rem;
+    padding: 2rem;
     text-align: center;
+
+    background: linear-gradient(
+      to bottom right,
+      rgba(0,0,0, 0),
+      rgba(33, 21, 69, .7),
+      rgba(33, 21, 69, 1)),
+
+      linear-gradient(
+      to bottom,
+      rgba(0,0,0, 0),
+      rgba(33, 21, 69, .8)),
+
+      url(writing.jpg) no-repeat bottom center;
+  
+    background-size: cover;
   }
 
   h1 {
-    font-size: 2rem;
+    font-size: 4rem;
     line-height: 1.75em;
   }
 
