--- a/styles/content.css
+++ b/styles/content.css
@@ -164,7 +164,7 @@ section {
 	background-color: #ecf9f2;
   width: 750px;
   border: 2px solid #ccdfcb;
-  padding: 70px;
+  padding: 30px;
   margin: 20px;
 }
 .section{
@@ -178,6 +178,8 @@ section {
   padding-left: 10px;
   color: #056571;
 }
+
+/*Youtube Video*/
 
 /*Table*/
 table {
@@ -267,84 +269,21 @@ td {
 
 /*iPhoneX*/
 @media only screen and (max-width:375px){
-	/*#back-to-top-btn{
+	#back-to-top-btn{
 		bottom: 20px;
 		right: 20px;
 		font-size: 40px;
 		width: 50px;
 		height: 50px;
 		border: 3px solid #333333;
-	}*/
-	.content{
-		font-size: 15px;
 	}
-	.heading{
-		font-size: 50px;
-		position: center;
+	.body-container{
+		font-size: 100%;
 	}
 
-	.topic{
-		font-size: 45px;
-	}
-	#back-to-top-btn{
-		display: none;
-		position: fixed;
-		bottom: 20px;
-		right: 20px;
-		font-size: 26px;
-		width: 50px;
-		height: 50px;
-		background-color: #ffffff;
-		color: #333333;
-		cursor: pointer;
-		outline: none;
-		border: 3px solid #333333;
-		border-radius: 50%;
-		transition-duration: 0.2s;
-		transition-timing-function: ease-in-out;
-		transition-property: background-colour, color;
-	}
-
-	#back-to-top-btn:hover, #back-to-top-btn:focus{
-		background-color: #333333;
-		color: #ffffff;
-	}
-
-	.btnEntrance{
-		animation-duration: 0.5s;
-		animation-fill-mode: both;
-		animation-name: btnEntrance;
-	}
-
-	/*FadeInUp*/
-	@@keyframes btnEntrance {
-		from{
-			opacity: 0;
-			transform: translate3d(0, 100%, 0);
-		}
-		to{
-			opacity: 1;
-			transform: translate3d(0, 0, 0);
-		}
-	}
-
-	.btnExit{
-		animation-duration: 0.25s;
-		animation-fill-mode: both;
-		animation-name: btnExit;
-	}
-
-	/*FadeOutDown*/
-	@@keyframes btnExit {
-		from{
-			opacity: 1;
-		}
-		to{
-			opacity: 0;
-			transform: translate3d(0, 100%, 0);
-		}
-
-	}
+.heading{
+	font-size: 2.5rem;
+}
 
 	.paragraph-box{
 		background-color: #ecf9f2;
@@ -353,7 +292,30 @@ td {
 	  padding: 30px;
 	  margin: 20px;
 	}
-	.
+
+	.search-box{
+		top: 150px;
+	}
+
+	.iframe-container {
+	  overflow: hidden;
+	  padding-top: 56.25%;
+	  position: relative;
+	}
+
+	.iframe-container iframe {
+	   border: 0;
+	   height: 100%;
+	   left: 0;
+	   position: absolute;
+	   top: 0;
+	   width: 100%;
+	}
+
+	/* 4x3 Aspect Ratio */
+	.iframe-container-4x3 {
+	  padding-top: 75%;
+	}
 }
 
 /*S5*/
