--- a/styles/content.css
+++ b/styles/content.css
@@ -135,7 +135,6 @@ section {
 
 /*heading*/
 
-}
 .heading{
   text-transform: uppercase;
   font-size: 3rem;
@@ -176,7 +175,7 @@ section {
   font-size: 1.5rem;
   letter-spacing: 0px;
   padding-left: 10px;
-  color: #056571;
+/*  color: #056571;*/
 }
 
 /*Youtube Video*/
